examples/test/testpolicy14024.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14024
  namespace: namespace27
spec:
  podSelector:
    matchLabels:
      key5: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value47
          key37: value9
          key4: value3
      podSelector:
        matchLabels:
          key44: value14
          key34: value0
